@@ -30,14 +30,20 @@
       END INTERFACE
 
       INTERFACE mp_bcast
+#if defined __T3E
         MODULE PROCEDURE mp_bcast_i1, mp_bcast_r1, mp_bcast_c1, &
           mp_bcast_z, mp_bcast_zv, &
           mp_bcast_iv, mp_bcast_rv, mp_bcast_cv, mp_bcast_l, mp_bcast_rm, &
-#if defined __T3E
-          mp_bcast_i4b, &
-#endif
+          mp_bcast_cm, mp_bcast_im, mp_bcast_it, mp_bcast_rt, mp_bcast_lv, &
+          mp_bcast_lm, mp_bcast_r4d, mp_bcast_ct, mp_bcast_c4d, &
+          mp_bcast_i4b
+#else
+        MODULE PROCEDURE mp_bcast_i1, mp_bcast_r1, mp_bcast_c1, &
+          mp_bcast_z, mp_bcast_zv, &
+          mp_bcast_iv, mp_bcast_rv, mp_bcast_cv, mp_bcast_l, mp_bcast_rm, &
           mp_bcast_cm, mp_bcast_im, mp_bcast_it, mp_bcast_rt, mp_bcast_lv, &
           mp_bcast_lm, mp_bcast_r4d, mp_bcast_ct,  mp_bcast_c4d
+#endif
       END INTERFACE
 
       INTERFACE mp_sum
